--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: Genesis Sample
-Theme URI: https://demo.studiopress.com/
-Description: This is the sample theme created for the Genesis Framework.
-Author: StudioPress
-Author URI: https://www.studiopress.com/
+Theme Name: Visual Voyager
+Theme URI: https://visualvoyager.net
+Description: Visual Voyager WordPress Genesis Child theme, based on Genesis Sample.
+Author: HelloTham
+Author URI: https://www.hellotham.com/
 
-Version: 3.3.1
+Version: 1.0.0
 
 Tags: accessibility-ready, block-styles, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, left-sidebar, one-column, right-sidebar, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, two-columns, wide-blocks
 
@@ -14,7 +14,7 @@ Template: genesis
 License: GPL-2.0-or-later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 
-Text Domain: genesis-sample
+Text Domain: visual-voyager
 Requires at least: 5.4
 Requires PHP: 5.6
 */
