--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
- * Theme Name: Visual Voyager
+ * Theme Name: Milennial Pink
  * Theme URI: https://visualvoyager.net
- * Description: Visual Voyager WordPress Genesis Child theme, based on Genesis Sample.
+ * Description: Milennial Pink WordPress Genesis Child theme, based on Genesis Sample.
  * Author: HelloTham
  * Author URI: https://www.hellotham.com/
  *
@@ -14,7 +14,7 @@
  * License: GPL-2.0-or-later
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
  *
- * Text Domain: visual-voyager
+ * Text Domain: milennial-pink
  * Requires at least: 5.4
  * Requires PHP: 5.6
  */
