--- a/style.css
+++ b/style.css
@@ -157,10 +157,10 @@ body > div {
 }
 
 body {
-	background-color: #f5f5f5;
-	color: #777;
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 16px;
+	background-color: #f4dede;
+	color: #615f5f;
+	font-family: 'Lato', sans-serif;
+	font-size: 18px;
 	font-size: 1.6rem;
 	font-weight: 400;
 	line-height: 1.625;
@@ -182,13 +182,13 @@ textarea:focus,
 }
 
 a {
-	color: #660099;
+	color: #d2386c;
 	text-decoration: none;
 }
 
 a:hover,
 a:focus {
-	color: #cc3366;
+	color: #ec809e;
 	text-decoration: none;
 }
 
@@ -210,7 +210,7 @@ li {
 hr {
 	border: 0;
 	border-collapse: collapse;
-	border-top: 1px solid #ddd;
+	border-top: 1px solid #f7caca;
 	clear: both;
 	margin: 2em 0;
 }
@@ -252,25 +252,25 @@ h3,
 h4,
 h5,
 h6 {
-	color: #363f48;
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
+	color: #85677b;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 700;
 	line-height: 1.2;
-	margin: 0 0 20px;
+	margin: 0 0 16px;
 }
 
 h1 {
-	font-size: 26px;
+	font-size: 36px;
 	font-size: 2.6rem;
 }
 
 h2 {
-	font-size: 22px;
+	font-size: 30px;
 	font-size: 2.2rem;
 }
 
 h3 {
-	font-size: 20px;
+	font-size: 24px;
 	font-size: 2rem;
 }
 
@@ -421,10 +421,10 @@ figure {
 }
 
 .gallery-item .gallery-icon > a:after {
-	background: #660099 none repeat scroll 0 0;
+	background: #d2386c none repeat scroll 0 0;
 	content: "\f105";
 	border-radius: 50%;
-	color: #fff;
+	color: #f4dede;
 	font-family: FontAwesome;
 	font-size: 24px;
 	font-size: 2.4rem;
@@ -453,10 +453,10 @@ figure {
 input,
 select,
 textarea {
-	background-color: #fff;
-	border: 1px solid #ddd;
+	background-color: #f0eee9;
+	border: 1px solid #b0879b;
 	border-radius: 3px;
-	color: #777;
+	color: #615f5f;
 	font-size: 16px;
 	font-size: 1.6rem;
 	-webkit-font-smoothing: antialiased;
@@ -478,13 +478,13 @@ input[type="radio"] {
 }
 
 ::-moz-placeholder {
-	color: #777;
+	color: #615f5f;
 	font-weight: 300;
 	opacity: 1;
 }
 
 ::-webkit-input-placeholder {
-	color: #777;
+	color: #615f5f;
 	font-weight: 300;
 }
 
@@ -494,13 +494,13 @@ input[type="reset"],
 input[type="submit"],
 .button ,
 .more-link{
-	background: #660099 none repeat scroll 0 0;
+	background: #d2386c none repeat scroll 0 0;
 	border: 0 none;
 	border-radius: 3px;
-	color: #fff;
+	color: #f4dede;
 	cursor: pointer;
 	display: inline-block;
-	font-family: "Source Sans Pro",sans-serif;
+	font-family: "Lato",sans-serif;
 	-webkit-font-smoothing: antialiased;
 	padding: 8px 20px;
 	width: auto;
@@ -529,7 +529,7 @@ input:focus[type="submit"],
 .button:focus,
 .more-link:focus {
 	box-shadow: none;
-	color: #fff;
+	color: #f4dede;
 }
 
 input[type="search"]::-webkit-search-cancel-button,
@@ -549,7 +549,7 @@ table {
 }
 
 tbody {
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #f7caca;
 }
 
 td,
@@ -558,7 +558,7 @@ th {
 }
 
 td {
-	border-top: 1px solid #ddd;
+	border-top: 1px solid #f7caca;
 	padding: 6px 0;
 }
 
@@ -590,8 +590,8 @@ th {
 	font-size: 1em;
 	font-weight: bold;
 	padding: 15px 23px 14px;
-	color: #333;
-	background: #fff;
+	color: #27272a;
+	background: #f4dede;
 	z-index: 100000; /*! Above WP toolbar. */
 	text-decoration: none;
 	box-shadow: 0 0 2px 2px rgba(0,0,0,.6);
@@ -961,7 +961,8 @@ th {
 }
 
 .author-box {
-	background: #fff;
+	background: #f7caca;
+	color: #27272a;
 	padding: 30px;
 	font-size: 16px;
 	font-size: 1.6rem;
@@ -1070,12 +1071,12 @@ th {
 
 .entry-title a,
 .sidebar .widget-title a {
-	color: #363f48;
+	color: #d2386c;
 }
 
 .entry-title a:hover,
 .entry-title a:focus {
-	color: #660099;
+	color: #b565a7;
 }
 
 .widget-title {
@@ -1087,7 +1088,7 @@ th {
 .footer-widgets .widget-title {
 	font-size: 20px;
 	font-size: 2rem;
-	color: #cc3366;
+	color: #ec809e;
 }
 
 /*! ## WordPress
@@ -1265,7 +1266,7 @@ img.alignright,
 
 /*! Display outline on focus */
 :focus {
-	color: #777;
+	color: #615f5f;
 	outline: 1px solid #ccc;
 }
 
@@ -1274,7 +1275,7 @@ img.alignright,
 ---------------------------------------------------------------------------------------------------- */
 
 .site-header {
-	background-color: #fff;
+	background-color: #f7caca;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -1317,11 +1318,11 @@ img.alignright,
 }
 
 .site-title {
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Bubblegum Sans', sans-serif;
 	font-size: 36px;
 	font-size: 3.6rem;
 	line-height: 1.2;
-	text-transform: uppercase;
+	text-transform: none;
 }
 
 @media only screen and (min-width: 860px) {
@@ -1334,14 +1335,17 @@ img.alignright,
 .site-title a,
 .site-title a:hover,
 .site-title a:focus {
-	color: #363f48;
+	color: #b565a7;
 }
 
 .site-description {
+	margin-top: 0;
 	font-size: 16px;
 	font-size: 1.6rem;
-	font-weight: 300;
-	line-height: 1.5;
+	font-weight: 700;
+	line-height: 1;
+	color: #d94f70;
+	font-family: 'Raleway', sans-serif;
 }
 
 .site-description,
@@ -1406,9 +1410,10 @@ img.alignright,
 
 .genesis-nav-menu {
 	clear: both;
-	color: #363f48;
-	font-size: 16px;
+	color: #d2386c;
+	font-size: 18px;
 	font-size: 1.6rem;
+	font-weight: 700;
 	line-height: inherit;
 	width: 100%;
 }
@@ -1427,11 +1432,11 @@ img.alignright,
 	display: block;
 	padding: 15px;
 	margin: 0;
-	color: #660099;
+	color: #d2386c;
 }
 
 .genesis-nav-menu a:hover {
-	color: #cc3366;
+	color: #b565a7;
 }
 
 .genesis-nav-menu .current-menu-item > a,
@@ -1450,8 +1455,8 @@ img.alignright,
 }
 
 .genesis-nav-menu .sub-menu a {
-	background-color: #fff;
-	border: 1px solid #eee;
+	background-color: #f0eee9;
+	border: 1px solid #ec809e;
 	border-top: 0;
 	padding: 12px 18px;
 	font-size: 15px;
@@ -1506,14 +1511,14 @@ img.alignright,
 
 	.genesis-nav-menu > .menu-item.highlight a,
 	.site-header.sticky .genesis-nav-menu > .menu-item.highlight a {
-		border: 1px solid #ddd;
+		border: 1px solid #ec809e;
 		border-radius: 2px;
 		padding: 3px 15px;
 		margin-left: 10px;
 	}
 
 	.genesis-nav-menu > .menu-item-has-children > a:after {
-		color: #ddd;
+		color: #d2386c;
 		content: "\f107";
 		font-family: fontawesome;
 		padding: 0 0 0 8px;
@@ -1521,7 +1526,7 @@ img.alignright,
 	}
 
 	.genesis-nav-menu .sub-menu > .menu-item-has-children > a:after {
-		color: #ddd;
+		color: #d2386c;
 		content: "\f105";
 		float: right;
 		font-family: fontawesome;
@@ -1575,9 +1580,9 @@ img.alignright,
 
 	.menu-toggle,
 	.sub-menu-toggle {
-		background-color: #fff;
+		background-color: #f0eee9;
 		border: 0;
-		color: #660099;
+		color: #d2386c;
 		position: relative;
 		padding: 3px 15px;
 		display: block;
@@ -1602,13 +1607,13 @@ img.alignright,
 	.menu-toggle:hover,
 	.sub-menu-toggle:focus,
 	.sub-menu-toggle:hover {
-		color: #cc3366;
+		color: #b565a7;
 	}
 
 	.menu-toggle:focus,
 	.sub-menu-toggle:focus {
-		border-color: #fff;
-		outline: 1px solid #cc3366;
+		border-color: #ec809e;
+		outline: 1px solid #f7caca;
 	}
 
 	.menu-toggle:focus {
@@ -1616,14 +1621,14 @@ img.alignright,
 	}
 
 	.menu-toggle {
-		border: 1px solid #ccc;
+		border: 1px solid #ec809e;
 		position: relative;
 		z-index: 1000;
 		width: 100%;
 	}
 
 	.menu-toggle::before {
-		color: #777;
+		color: #d2386c;
 		content: "\f0c9";
 		font-family: 'FontAwesome';
 		font-size: 15px;
@@ -1646,7 +1651,7 @@ img.alignright,
 	}
 
 	.sub-menu-toggle::before {
-		color: #333;
+		color: #d2386c;
 		content: "\f107";
 		font-family: 'FontAwesome';
 		display: inline-block;
@@ -1681,16 +1686,16 @@ img.alignright,
 
 	.genesis-responsive-menu .genesis-nav-menu a:focus,
 	.genesis-responsive-menu .genesis-nav-menu a:hover {
-		color: #cc3366;
+		color: #b565a7;
 	}
 
 	.genesis-responsive-menu .genesis-nav-menu a:focus {
-		color: #cc3366;
-		outline: thin solid #ccc;
+		color: #b565a7;
+		outline: thin solid #f7caca;
 	}
 
 	.genesis-responsive-menu .genesis-nav-menu .menu-item a {
-		border-top: 1px solid #eee;
+		border-top: 1px solid #f7caca;
 		margin-bottom: 1px;
 		padding: 10px 20px;
 		width: 100%;
@@ -1736,7 +1741,7 @@ img.alignright,
 		border-left: none;
 		border-right: none;
 		border-bottom: none;
-		border-top: 1px solid #eee;
+		border-top: 1px solid #f7caca;
 		padding-left: 30px;
 	}
 
@@ -1768,8 +1773,9 @@ img.alignright,
 /*! ## Primary Navigation
 --------------------------------------------- */
 .nav-primary {
-	background: #fff;
-}
+	background: #f0eee9;
+	border-radius: 10px;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);}
 
 .nav-primary .wrap {
 	padding: 0;
@@ -1779,14 +1785,14 @@ img.alignright,
 --------------------------------------------- */
 
 .nav-secondary {
-	background: #fff;
-	border-bottom: 1px solid #e6e9ed;
+	background: #d2c4d6;
+	border-bottom: 2px solid #f0eee9;
 }
 
 @media only screen and (min-width: 1023px) {
 
 	.nav-secondary {
-		border-top: 1px solid #e6e9ed;
+		border-top: 2px solid #f0eee9;
 	}
 
 }
@@ -1795,6 +1801,7 @@ img.alignright,
 --------------------------------------------- */
 .site-header .nav-primary {
 	clear: both;
+	margin-top: 20px;
 }
 
 @media only screen and (min-width: 1023px) {
@@ -1833,8 +1840,8 @@ img.alignright,
 }
 
 .site-header .genesis-nav-menu > li > a {
-	padding-top: 25px;
-	padding-bottom: 25px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	margin: 0;
 	line-height: inherit;
 	-webkit-transition: all 0.3s linear 0s;
@@ -1862,8 +1869,8 @@ img.alignright,
 }
 
 .site-header.sticky .genesis-nav-menu > li > a {
-	padding-top: 16px;
-	padding-bottom: 16px;
+	padding-top: 4px;
+	padding-bottom: 8px;
 	line-height: inherit;
 }
 
@@ -1898,9 +1905,9 @@ img.alignright,
 /*! ## Entries
 --------------------------------------------- */
 .entry {
-	background-color: #fff;
+	background-color: #f0eee9;
 	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-	border-radius: 2px;
+	border-radius: 10px;
 	margin-bottom: 30px;
 	padding: 0;
 }
@@ -1986,15 +1993,15 @@ img.alignright,
 }
 
 .entry-content code {
-	background-color: #333;
-	color: #ddd;
+	background-color: #27272a;
+	color: #f7caca;
 }
 
 /*! ## Entry Meta
 --------------------------------------------- */
 
 p.entry-meta {
-	color: #363f48;
+	color: #85677b;
 	font-size: 15px;
 	font-size: 1.5rem;
 	margin-bottom: 0;
@@ -2019,7 +2026,7 @@ p.entry-meta {
 	margin-bottom: 4px;
 	line-height: 100%;
 	display: inline-block;
-	background-color: #660099;
+	background-color: #3cadd4;
 	color: #fff;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -2032,23 +2039,23 @@ p.entry-meta {
 	margin-bottom: 4px;
 	line-height: 100%;
 	display: inline-block;
-	border: 1px solid #660099;
-	color: #660099;
+	border: 1px solid #64bfa4;
+	color: #64bfa4;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
 	text-decoration: none;
 }
 
 .entry-categories a:hover {
-	background-color: #cc3366;
-	border-color: #660099;
-	color: #ffffff;
+	background-color: #d2386c;
+	border-color: #ec809e;
+	color: #f4dede;
 	text-decoration: none;
 }
 
 .entry-tags a:hover {
-	border-color: #cc3366;
-	border: 1px solid #cc3366;
+	border-color: #ec809e;
+	border: 1px solid #ec809e;
 	text-decoration: none;
 }
 
@@ -2062,12 +2069,12 @@ p.entry-meta {
 }
 
 .entry-meta a {
-	color: #660099;
+	color: #919bc9;
 	margin-bottom: 0;
 }
 
 .entry-meta a:hover {
-	color: #cc3366;
+	color: #b565a7;
 }
 
 .entry-meta .entry-time::after {
@@ -2109,10 +2116,10 @@ p.entry-meta {
 .archive-pagination li a,
 .pagination-next a,
 .pagination-previous a {
-	background: #fff none repeat scroll 0 0;
+	background: #b0879b none repeat scroll 0 0;
 	border-radius: 3px;
 	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-	color: #777;
+	color: #fff;
 	display: inline-block;
 	padding: 6px 16px;
 	margin-right: 5px;
@@ -2121,7 +2128,7 @@ p.entry-meta {
 .archive-pagination li a:hover,
 .archive-pagination li a:focus,
 .archive-pagination .active a {
-	background: #660099 none repeat scroll 0 0;
+	background: #be9cc1 none repeat scroll 0 0;
 	color: #fff;
 }
 
@@ -2144,6 +2151,7 @@ p.entry-meta {
 .comment-content {
 	clear: both;
 	word-wrap: break-word;
+	color: #27272a;
 }
 
 .comment-list li {
@@ -2154,19 +2162,19 @@ p.entry-meta {
 .comment-list .comment-time a {
 	font-size: 14px;
 	font-size: 1.4rem;
-	color: #777;
+	color: #d2386c;
 }
 
 .comment-list .comment-time a:hover {
-	color: #660099;
+	color: #b565a7;
 }
 
 .comment-list li article {
-	background: #fff none repeat scroll 0 0;
+	background: #d2c4db none repeat scroll 0 0;
 	margin: 0;
 	padding: 10px 20px;
 	position: relative;
-	border-radius: 2px;
+	border-radius: 10px;
 	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
 }
 
@@ -2227,7 +2235,7 @@ p.entry-meta {
 }
 
 .form-allowed-tags {
-	background-color: #f5f5f5;
+	background-color: #f7caca;
 	font-size: 16px;
 	font-size: 1.6rem;
 	padding: 24px;
@@ -2240,10 +2248,16 @@ p.entry-meta {
 .sidebar {
 	font-size: 16px;
 	font-size: 1.6rem;
+	background-color: #f7caca;
+	padding: 10px;
+	border-radius: 10px;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+	margin-bottom: 20px;
 }
 
 .sidebar p {
 	margin-bottom: 20px;
+	color: #27272a;
 }
 
 .sidebar li {
@@ -2254,7 +2268,7 @@ p.entry-meta {
 
 .sidebar li:before {
 	content: "\f105";
-	color: #660099;
+	color: #d2386c;
 	font-family: fontawesome;
 	left: 5px;
 	padding-right: 8px;
@@ -2263,11 +2277,11 @@ p.entry-meta {
 }
 
 .sidebar li a {
-	color: #777;
+	color: #d2386c;
 }
 
 .sidebar li a:hover {
-	color: #660099;
+	color: #b565a7;
 }
 
 .sidebar p:last-child,
@@ -2296,7 +2310,7 @@ p.entry-meta {
 ---------------------------------------------------------------------------------------------------- */
 
 .footer-widgets {
-	background-color: #dddddd;
+	background-color: #f7caca;
 	clear: both;
 	font-size: 14px;
 	font-size: 1.4rem;
@@ -2305,11 +2319,11 @@ p.entry-meta {
 }
 
 .footer-widgets {
-	color: #555;
+	color: #615f5f;
 }
 
 .footer-widgets input {
-	background: #f7f7f7;
+	background: #f4dede;
 	border: none;
 	font-size: 13px;
 	font-size: 1.3rem;
@@ -2317,18 +2331,18 @@ p.entry-meta {
 }
 
 .footer-widgets a.button {
-	color: #fff;
-	background: #660099
+	color: #f4dede;
+	background: #d2386c
 }
 
 .footer-widgets a.button:hover {
-	color: #fff;
-	background: #cc3366
+	color: #f4dede;
+	background: #b565a7
 }
 
 .footer-widgets a:hover,
 .footer-widgets a:focus {
-	color: #cc3366;
+	color: #b565a7;
 }
 
 .footer-widgets li {
@@ -2338,7 +2352,7 @@ p.entry-meta {
 }
 
 .footer-widgets li a {
-	color: #660099;
+	color: #d2386c;
 }
 
 .footer-widgets li:before {
@@ -2391,7 +2405,7 @@ p.entry-meta {
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
-	background-color: #660099;
+	background-color: #d2c4d6;
 	font-size: 14px;
 	font-size: 1.4rem;
 	line-height: 1;
@@ -2410,11 +2424,11 @@ p.entry-meta {
 
 .site-footer,
 .site-footer a {
-	color: #fff;
+	color: #615f5f;
 }
 
 .site-footer a:hover {
-	color: #ff99cc;
+	color: #b565a7;
 }
 
 .site-footer p {
@@ -2465,7 +2479,7 @@ p.entry-meta {
 }
 
 .nav-footer .genesis-nav-menu a:hover {
-	color: #ff99cc;
+	color: #b565a7;
 }
 
 .nav-footer .genesis-nav-menu li:first-child a {
@@ -2506,8 +2520,8 @@ p.entry-meta {
 }
 
 .footer-widgets .enews-widget input[type="submit"] {
-	background: #660099 none repeat scroll 0 0;
-	color: #fff;
+	background: #d2386c none repeat scroll 0 0;
+	color: #f4dede;
 	border-radius: 0 3px 3px 0;
 	bottom: 0;
 	margin: 0;
@@ -2538,17 +2552,17 @@ p.entry-meta {
 	display: none;
 	right: 20px;
 	bottom: 14px;
-	color: #fff;
+	color: #f4dede;
 	line-height: 1;
 	z-index: 10;
 	padding: 5px 10px;
-	background: #333 none repeat scroll 0 0;
+	background: #27272a none repeat scroll 0 0;
 	border-radius: 2px;
 }
 
 .site-footer .scrollup,
 .site-footer .scrollup:hover {
-	color: #fff;
+	color: #f4dede;
 }
 
 
@@ -2576,11 +2590,11 @@ p.entry-meta {
 --------------------------------------------- */
 
 .site-topbar {
-	background: #fff;
-	border-bottom: 1px solid #e6e9ed;
+	background: #f4dede;
+	border-bottom: 2px solid #f0eee9;
 	font-size: 14px;
 	font-size: 1.4rem;
-	color: #777;
+	color: #615f5f;
 	line-height: normal;
 	height: auto;
 	text-align: center;
@@ -2624,11 +2638,11 @@ p.entry-meta {
 }
 
 .site-topbar a {
-	color: #777;
+	color: #d2386c;
 }
 
 .site-topbar a:hover {
-	color: #660099;
+	color: #b565a7;
 }
 
 .site-topbar li {
@@ -2640,7 +2654,30 @@ p.entry-meta {
 	padding: 0 6px 0 0;
 }
 
+.site-topbar .search-form {
+	text-align: left;
+	float: left;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	-webkit-transition: all 0.3s linear 0s;
+	transition:         all 0.3s linear 0s;
+}
 
+@media only screen and (min-width: 1023px) {
+
+	.site-topbar .search-form {
+		text-align: center;
+		display: inline-block;
+		padding-top: 0;
+		padding-bottom: 0
+	}
+
+}
+
+.site-topbar input {
+	padding: 2px;
+	line-height: normal;
+}
 /*! ## Portfolio Widget
 --------------------------------------------- */
 
@@ -2679,10 +2716,10 @@ p.entry-meta {
 }
 
 .featured-portfolio .entry .entry-thumbnail:after {
-	background: #660099 none repeat scroll 0 0;
+	background: #d2386c none repeat scroll 0 0;
 	content: "\f105";
 	border-radius: 50%;
-	color: #fff;
+	color: #f4dede;
 	font-family: fontawesome;
 	font-size: 24px;
 	font-size: 2.4rem;
@@ -2752,10 +2789,10 @@ p.entry-meta {
 }
 
 .genesis-pro-portfolio .entry .portfolio-featured-image:after {
-	background: #660099 none repeat scroll 0 0;
+	background: #d2386c none repeat scroll 0 0;
 	content: "\f105";
 	border-radius: 50%;
-	color: #fff;
+	color: #f4dede;
 	font-family: fontawesome;
 	font-size: 24px;
 	font-size: 2.4rem;
@@ -2820,7 +2857,7 @@ p.entry-meta {
 }
 
 .simple-social-icons ul li a:focus {
-	outline: 1px solid #ddd !important;
+	outline: 1px solid #f7caca !important;
 }
 
 .simple-social-icons svg[class^="social-"],
@@ -2858,12 +2895,12 @@ p.entry-meta {
 }
 
 .site-topbar .simple-social-icons li a:focus {
-	outline: 1px solid #ddd !important;
+	outline: 1px solid #f7caca !important;
 }
 
 /*! Sidebar Social Icons */
 .sidebar .simple-social-icons li a:focus {
-	outline: 1px solid #ddd !important;
+	outline: 1px solid #f7caca !important;
 }
 
 /*! # Print Styles
